implemented modified udpqueue to allow audio receiving
reflection yuck