@@ -60,8 +60,34 @@
 			<artifactId>v2</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j2-impl</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-bom</artifactId>
+				<version>2.24.3</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
@@ -85,7 +111,9 @@
 						--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
 						--add-opens=java.base/java.net=ALL-UNNAMED
 						--add-opens=java.base/java.text=ALL-UNNAMED
-						--add-opens=java.sql/java.sql=ALL-UNNAMED</argLine>
+						--add-opens=java.sql/java.sql=ALL-UNNAMED
+						--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+						--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 
